RESOLVED FIXED54490
REGRESSION (r78382): No scripts appear in the Web Inspector's Scripts panel on Windows, and many inspector regression tests are failing
https://bugs.webkit.org/show_bug.cgi?id=54490
Summary REGRESSION (r78382): No scripts appear in the Web Inspector's Scripts panel o...
Steve Falkenburg
Reported 2011-02-15 13:09:58 PST
After http://trac.webkit.org/changeset/78382, these tests started failing: inspector/console/console-api-on-call-frame.html inspector/console/console-assert.html inspector/debugger/debugger-step-over.html inspector/debugger/debugger-eval-while-paused.html inspector/debugger/debugger-pause-on-breakpoint.html inspector/debugger/debugger-eval-on-call-frame.html inspector/debugger/debugger-step-in.html inspector/debugger/debugger-scripts.html inspector/debugger/debugger-pause-in-eval-script.html inspector/debugger/debugger-proto-property.html inspector/debugger/debugger-step-out.html inspector/debugger/debugger-pause-on-exception.html inspector/debugger/debugger-no-nested-pause.html inspector/debugger/debugger-cyclic-ref.html inspector/debugger/debugger-autocontinue-on-syntax-error.html inspector/debugger/debugger-suspend-active-dom-objects.html inspector/debugger/debugger-pause-on-debugger-statement.html inspector/debugger/debugger-expand-scope.html inspector/debugger/debugger-breakpoints-not-activated-on-reload.html
Attachments
Patch (2.90 KB, patch)
2011-03-22 18:52 PDT, Geoffrey Garen
mjs: review+
Steve Falkenburg
Comment 1 2011-02-15 13:21:49 PST
Added tests to skip list in http://trac.webkit.org/changeset/78607
Geoffrey Garen
Comment 2 2011-02-15 13:22:25 PST
Alexander Pavlov (apavlov)
Comment 3 2011-02-16 10:29:46 PST
In Web Inspector on Windows, I'm not seeing ANY scripts in the Scripts panel (this issue is not observed on other platforms). I believe this is caused by this same issue and breaks the JS debugging experience on Windows altogether.
Adam Roben (:aroben)
Comment 4 2011-02-17 07:33:06 PST
*** Bug 54653 has been marked as a duplicate of this bug. ***
Adam Roben (:aroben)
Comment 5 2011-02-17 07:36:59 PST
Geoffrey Garen
Comment 6 2011-03-22 18:52:08 PDT
Maciej Stachowiak
Comment 7 2011-03-22 22:11:57 PDT
Comment on attachment 86556 [details] Patch r=me
Geoffrey Garen
Comment 8 2011-03-22 22:21:45 PDT
Adam Roben (:aroben)
Comment 9 2011-03-23 05:41:59 PDT
Geoff, why didn't you remove the Skipped tests from LayoutTests/platform/win/Skipped?
Adam Roben (:aroben)
Comment 10 2011-03-23 08:36:25 PDT
Ah, you did, in r81752. Thanks!
Note You need to log in before you can comment on or make changes to this bug.