2011-03-22  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Maciej Stachowiak.

        REGRESSION (r78382): No scripts appear in the Web Inspector's Scripts
        panel on Windows, and many inspector regression tests are failing
        https://bugs.webkit.org/show_bug.cgi?id=54490

        The bug was caused by two different classes using the same name (Recompiler).

        * debugger/Debugger.cpp:
        * runtime/JSGlobalData.cpp:
        (WTF::Recompiler::operator()): Put Recompiler in an anonymous namespace,
        so our two recompilers' inline functions don't stomp each other at
        link time.


Canonical link: https://commits.webkit.org/71575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81751 268f45cc-cd09-0410-ab3c-d52691b4dbfc